# indexing_lab_part_3

./: CMakeLists.txt  conf.txt  main.cpp
